mongoose connection and basic query

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=8000
 DOMAIN_URL=http://localhost:8000
 SECRET_TOKEN=ASJGJDJAS3456SADJKNAS
 MONGO_URL=mongodb+srv://abishek:HFKO2JSpLgZ3Vjz0@cluster0.ejutbbm.mongodb.net/
+MONGOOSE_URL=mongodb+srv://abishek:HFKO2JSpLgZ3Vjz0@cluster0.ejutbbm.mongodb.net/nodejs
